--- a/LinearAlgebra/LinearAlgebra.vcxproj.filters
+++ b/LinearAlgebra/LinearAlgebra.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tests.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
